[package]
name = "proxy"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
chitchat.workspace = true
clap.workspace = true
docker-api = "0.14"
dotenvy = "0.15.7"
futures = "0.3.31"
gossip.workspace = true
http-server.workspace = true
network.workspace = true
opentelemetry.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23.19", default-features = false, features = ["ring", "std", "logging"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
telemetry_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transport-layer.workspace = true
wtransport.workspace = true

base64 = { version = "0.22.1" }
ed25519-dalek.workspace = true
hex = "0.4.3"
rand.workspace = true
url = "2.5.4"
