[package]
name = "transport-layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-channel = "2.3.1"
async-trait.workspace = true
bincode.workspace = true
bytes = { version = "1.10.1" }
cbc = { version = "^0.1", features = ["block-padding"] }
cipher = { version = "^0.4.2", features = ["alloc", "block-padding"] }
des = "^0.8"
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
futures.workspace = true
futures-io = "0.3.31"
getrandom = "^0.2"
hex = "0.4.3"
hmac = "^0.12"
lazy_static = "^1.4"
libc = { version = "0.2" }
msquic = { git = "https://github.com/gosh-sh/msquic.git", rev = "6b49129a65c2a095396d30199bd6371e3388ef7c", features = ["static"] }
parking_lot = "0.12.3"
pem = "3.0.5"
quinn.workspace = true
rand.workspace = true
rangemap = { version = "1.5.1" }
rc2 = "^0.8"
rcgen = { version = "0.13.2", features = ["pem"] }
ring = { version = "0.17.14" }
rustls.workspace = true
rustls-pki-types = { version = "1.8.0" }
sha1 = "^0.10"
sha2 = "0.10.9"
telemetry_utils.workspace = true
tempfile = "3.20.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tvm_types.workspace = true
webpki = { version = "0.22.4" }
wtransport.workspace = true
x509-parser = { version = "0.17.0", features = ["verify"] }
yasna = { version = "^0.5", features = ["std"] }

[dev-dependencies]
hex-literal = "^0.3.1"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
