[package]
name = "ext-messages-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
sdk-wrapper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tvm_abi.workspace = true
tvm_block.workspace = true
tvm_client.workspace = true
tvm_types.workspace = true

[dev-dependencies]
rand.workspace = true
