[package]
name = "ext-messages-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
account-state.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
lazy_static.workspace = true
node-types.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tvm_abi.workspace = true
tvm_block.workspace = true
tvm_contracts = { path = "../../tvm_contracts" }
tvm_types.workspace = true

[dev-dependencies]
rand.workspace = true
