[package]
name = "account-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]

[dependencies]
aerospike.workspace = true
aerospike2 = { path = "../aerospike2" }
anyhow.workspace = true
bincode.workspace = true
critical-thread.workspace = true
crossbeam-channel = "0.5.15"
derive-getters = "0.5.0"
derive_setters = { path = "../derive-setters" }
lru = "0.12.3"
multi-map.workspace = true
node-types.workspace = true
opentelemetry.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_with.workspace = true
tempfile.workspace = true
tracing.workspace = true
trie-map.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

base64 = { version = "0.22.1" }
blake3 = { version = "1.8.2" }
bytes = { version = "1.11.0" }
clap = { version = "4.6.0", features = ["derive"] }
digest = "0.10.7"
hashbrown = "0.16.0"
hex = "0.4.3"
libc = "0.2"
num = "0.4.3"
sha2 = "0.10.9"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1.21.3"
tracing-subscriber.workspace = true

[[bin]]
name = "archive-summary"
path = "src/bin/archive_summary.rs"

[[bench]]
name = "update_maps"
harness = false

[features]
disable-live-counting = ["multi-map/disable-live-counting"]
