[package]
name = "aerospike2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
aerospike = { version = "2.0.0", default-features = false, features = ["rt-tokio", "async", "serialization", "tls"] }
anyhow.workspace = true
futures.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
