[package]
name = "multi-map"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
hex.workspace = true
node-types.workspace = true
parking_lot.workspace = true
serde.workspace = true
trie-map.workspace = true

[dev-dependencies]
blake3 = "1"
criterion = { version = "0.5", default-features = false }
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true

[[bench]]
name = "perf_compare"
harness = false
