[package]
name = "multi-map"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
blake3 = { version = "1.8.3" }
hex.workspace = true
node-types.workspace = true
parking_lot.workspace = true
serde.workspace = true

[dev-dependencies]
blake3 = "1"
criterion = { version = "0.5", default-features = false }
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true

[features]
disable-live-counting = []
