[package]
name = "thread-reference-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
node-types.workspace = true
serde.workspace = true
tracing.workspace = true
typed-builder = "0.20.0"

[dev-dependencies]
bincode = "1.3.3"

[features]
allow-threads-merge = []
